--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@types/react-big-calendar": "^1.15.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
@@ -16,8 +17,10 @@
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "recharts": "^2.13.3",
-    "remove": "^0.1.5"
+    "remove": "^0.1.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
